# music-metadata-filter

./: .flake8  .gitignore  LICENSE.md  README.md  pyproject.toml  regen.sh  requirements-dev.txt  setup.py  tasks.py
.github/workflows/: test.yml
music_metadata_filter/: filter.py  filters.py  functions.py  opinionated_filters.py  opinionated_functions.py  opinionated_rules.py  rules.py
scripts/: format_test_fixtures.py  rules_gen.py
tests/: test_filters.py  test_functions.py  test_metadatafilter.py  test_opinionated_filters.py
tests/fixtures/filters/: spotify.json
tests/fixtures/functions/: fix-track-suffix.json  remove-live.json  remove-reissue.json  remove-remastered.json  remove-version.json  remove-zero-width.json  youtube.json
tests/fixtures/opinionated_filters/: spotify.json
